[tool.poetry]
name = "backend-fadegor05"
version = "0.1.0"
description = ""
authors = ["fadegor05 <fad.egor05@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_fadegor05"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.28"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
