[tool.poetry]
name = "backend-fadegor05"
version = "0.1.0"
description = ""
authors = ["fadegor05 <fad.egor05@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_fadegor05"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.28"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
geocoder = "^1.38.1"
aiogram-dialog = "^2.1.0"
pillow = "^10.2.0"
requests = "^2.31.0"
staticmap = "^0.5.7"
polyline = "^2.0.2"
osmapi = "^4.1.0"
osmpythontools = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
